--- a/index.html
+++ b/index.html
@@ -29,10 +29,114 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+        <!-- Timeblocks go here -->
+
+        <div id="hour9" class="row time-block">
+            <div class="col-md-1 hour">
+                9 AM
+            </div>
+            <textarea class="col-md-10 description">
+            </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+    </div>
+    <div class="container">
+
+        <div id="hour10" class="row time-block">
+            <div class="col-md-1 hour">
+                10 AM
+            </div>
+            <textarea class="col-md-10 description">
+            </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+    </div>
+    <div class="container">
+
+        <div id="hour11" class="row time-block">
+            <div class="col-md-1 hour">
+                11 AM
+            </div>
+            <textarea class="col-md-10 description">
+            </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+    </div>
+    <div class="container">
+        <!-- Timeblocks go here -->
+
+        <div id="hour12" class="row time-block">
+            <div class="col-md-1 hour">
+                12 PM
+            </div>
+            <textarea class="col-md-10 description">
+            </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+    </div>
+    <div class="container">
+        <!-- Timeblocks go here -->
+
+        <div id="hour1" class="row time-block">
+            <div class="col-md-1 hour">
+                1 PM
+            </div>
+            <textarea class="col-md-10 description">
+            </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+    </div>
+    <div class="container">
+        <!-- Timeblocks go here -->
+
+        <div id="hour2" class="row time-block">
+            <div class="col-md-1 hour">
+                2 PM
+            </div>
+            <textarea class="col-md-10 description">
+            </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+    </div>
+    <div class="container">
+        <!-- Timeblocks go here -->
+
+        <div id="hour3" class="row time-block">
+            <div class="col-md-1 hour">
+                3 PM
+            </div>
+            <textarea class="col-md-10 description">
+            </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+    </div>
+    <div class="container">
+        <!-- Timeblocks go here -->
+
+        <div id="hour4" class="row time-block">
+            <div class="col-md-1 hour">
+                4 PM
+            </div>
+            <textarea class="col-md-10 description">
+            </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+    </div>
+    <div class="container">
+        <!-- Timeblocks go here -->
+
+        <div id="hour5" class="row time-block">
+            <div class="col-md-1 hour">
+                5 PM
+            </div>
+            <textarea class="col-md-10 description">
+            </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="Assets/script.js"></script>
   </body>
 </html>
